Stable versions
---------------

4.1.0 ():
	- add API call to fill equally-sized data chunks with PCM data
	- fix simultaneous volume slide up and down
	- fix IT vs XM vibrato rate using quirk
	- fix IT portamento after note cut (reported by Benjamin Shadwick)
	- fix segfault in AMD module loader (reported by Jacques Philippe)
	- fix sequence scanner to prevent listing empty sequences
	- fix build issues in Cygwin (reported by Benjamin Shadwick)
	- fix pkg-config library definition

4.0.4 (20130406):
	- fix IT volume column slide to note
	- fix IT pan setting effect
	- fix IT vibrato effect depth
	- fix IT portamento after fadeout
	- fix IT panbrello waveform setting
	- fix tremolo effect depth
	- fix random waveform generator

4.0.3 (20130331):
	- add module quirks for well-known cases
	- add built-in zoo depacker
	- add IT pan slide effect 
	- add IT panbrello effect
	- fix IT pan setting effect (reported by Jan Engelhardt)
	- fix IT fine vibrato effect
	- fix MED BPM mode tempo setting
	- fix global volume slides
	- fix bidirectional sample loops
	- fix sequence entry points
	- rescan sequences if timing flag is changed

4.0.2 (20130223):
	- add IT volume column vibrato
	- add IT pattern row delay effect
	- add fine global volume slide effect
	- fix IT instrument vibrato depth and sweep
	- fix IT past note effects
	- fix IT fadeout values
	- fix IT fadeout event loading
	- fix period range for values lower than 8
	- fix global volume slides
	- fix channel volume setting
	- fix multi-retrig effect counter
	- fix invalid sample number access
	- fix memory access violation in MMCMP depacker
	- fix global volume setting in module scan
	- reset virtual channel flags on creation
	- change maximum number of mixer voices to 128

4.0.1 (20130216):
	- fix license issues reported by Jan Engelhardt
	- minor documentation updates

4.0.0 (20130213):
	- split library and application in different packages
	- remove OSS sequencer support